Added browserify, browser-sync, gulp watch task and a preview iframe

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
         <div v-component="debug" id="debug-container"></div>
       </div>
     </div>
+    <div v-component="viewer" v-ref="viewer" id="viewer"> here </div>
   </div>
 
   <div v-component="settings" v-with="settings" v-show="showSettings" id="settingsContainer"></div>
