Allows for resizing the preview iframe's and code editor's widths

--- a/app/viewer/template.html
+++ b/app/viewer/template.html
@@ -1,3 +1,5 @@
 <div id="viewer-container">
+  <div id="viewer-drag" v-on="mousedown: startDrag"></div>
   <iframe id="viewer-iframe" ></iframe>
+  <div id="frame-blocker"></div>
 </div>
