--- a/public/boot.html
+++ b/public/boot.html
@@ -10,10 +10,10 @@ var winSettings = {
   x: 50,
   y: 50,
   width: 1024,
-  height: 768,
-  toolbar: false,
+  height: 800,
+  toolbar: true,
   focus: true,
-  show: false
+  show: true
 };
 
 localStorage.openWindows = 0;
