--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       <div v-component="tabs" v-ref="tabs" id="tab-container"></div>
       <div id = "editor-container">
         <div v-component="editor" v-ref="editor" id="main"></div>
+        <div></div>
         <div v-component="debug" id="debug-container"></div>
       </div>
     </div>
