Shows the URL for external browser use and kills the server when pressing the stop button

--- a/app/settings/template.html
+++ b/app/settings/template.html
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <!-- Run in browser -->
+    <!-- Run in browser
     <div id="rib" class="section">
       <p class="label">Run in browser</p>
       <div id="ribOptions" class="hiddenRadio radioOptions">
@@ -60,6 +60,7 @@
         <label class="radioSelection" for="runInBrowserOff">Off</label>
       </div>
     </div>
+    -->
 
     <!-- Show sidebar -->
     <div id="ss" class="section">
