--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <img id="logo" src="images/p5-logo.png">
     <button class="button" id="play" v-class="running: $root.running" v-on="click: $root.toggleRun()"></button>
     <h1 id="project-name" v-text="projectName"></h1>
+    <h1 id="project-url">url</h1>
     <div id="toolbar">
       <div id="actions">
         <img id="settings" class="button" title="Preferences" src="images/settings-button.svg" v-on="click: $root.toggleSettingsPane()">
