--- a/public/boot.html
+++ b/public/boot.html
@@ -11,7 +11,7 @@ var winSettings = {
   y: 50,
   width: 1024,
   height: 800,
-  toolbar: true,
+  toolbar: false,
   focus: true,
   show: true
 };
